# SoftRasterization

./: CMakeLists.txt  Camera.hpp  FragmentShader.cpp  FragmentShader.hpp  Geometry.cpp  Geometry.hpp  Global.cpp  Global.hpp  Loader.hpp  Mesh.hpp  README.md  Rasterizer.cpp  Rasterizer.hpp  Ray.hpp  Scene.cpp  Scene.hpp  Texture.cpp  Texture.hpp  VertexShader.hpp  common.hpp  main  main.cpp  mathutil.cpp  mathutil.hpp
